--- a/style.scss
+++ b/style.scss
@@ -45,6 +45,7 @@ textarea {
     justify-content: space-between;
     text-transform: capitalize;
     background-color: white;
+    z-index: 999;
 
     &__brand {
         font-size: 3rem;
