--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@ $secondary-color: #fef8f5;
 $brown: #4e4039;
 $gray: #5a6570;
 $light-brown: #7a6960;
+$title-color: #c2b7b1;
 
 html {
     font-family: 'Open Sans', sans-serif;
@@ -45,6 +46,7 @@ textarea {
     justify-content: space-between;
     text-transform: capitalize;
     background-color: white;
+    box-shadow: 0px 5px 10px 0px #eee;
     z-index: 999;
 
     &__brand {
@@ -56,6 +58,9 @@ textarea {
             font-size: 1.5rem;
             display: inline-block;
             padding: 1rem 0 1rem 3rem;
+            &:hover {
+                color: $primary-color;
+            }
         }
         &__button {
             padding: 1.5rem 2.5rem;
@@ -174,7 +179,229 @@ textarea {
     &__icon {
         margin-bottom: 1rem;
         font-size: 3.8rem;
-        color: rgba($primary-color, 0.6);
+        color: rgba($primary-color, 0.6);   
     }
 
+}
+
+.services {
+    padding: 5rem 7.2rem;
+    background-color: $secondary-color;
+
+    &__header {
+        text-align: center;
+    }
+
+    &__title {
+        font-size: 2.4rem;
+        font-weight: 600;
+        color: $title-color;
+        margin-bottom: 1rem;
+    }
+
+    &__desc {
+        padding-bottom: 2rem;
+        margin-bottom: 4.3rem;;
+        font-size: 3.2rem;
+        font-weight: 700;
+        position: relative;
+        &:before {
+            content: "";
+            width: 7rem;
+            height: 2px;
+            background-color: $primary-color;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    &__tags {
+        display: flex;
+        margin-left: -2.5rem;
+    }
+
+    &__tag {
+        width: calc(25% - 2.5rem);
+        margin: 0 0 4rem 2.5rem;
+        padding: 3.5rem 3rem;
+        background-color: white;
+        border-radius: 2rem;
+        text-align: center;
+        box-shadow: 0px 5px 15px 5px #eee;
+        border-bottom: 3px solid white;
+        transition: all 0.2s linear;
+        &:hover {
+            border-bottom: 3px solid $primary-color;
+            transform: translateY(-3px);
+        }
+    }
+
+    &__icon {
+        margin-bottom: 2rem;
+        font-size: 3.4rem;
+        color: $primary-color;
+    }
+
+    &__tag-name {
+        margin-bottom: 2rem;
+        font-size: 1.8rem;
+        font-weight: 600;
+        color: #111;
+    }
+
+    &__tag-content {
+        font-size: 1.5rem;
+        line-height: 1.9;
+    }
+}
+
+.portfolio {
+    margin: 5rem 7.2rem;
+
+    &__header {
+        text-align: center;
+    }
+
+    &__title {
+        font-size: 2.4rem;
+        font-weight: 600;
+        color: $title-color;
+        margin-bottom: 1rem;
+    }
+
+    &__desc {
+        padding-bottom: 2rem;
+        margin-bottom: 4.3rem;;
+        font-size: 3.2rem;
+        font-weight: 700;
+        position: relative;
+        &:before {
+            content: "";
+            width: 7rem;
+            height: 2px;
+            background-color: $primary-color;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    &__filter {
+        display: flex;
+        justify-content: center;
+        margin-left: -3.3rem;
+        margin-bottom: 5rem;
+    }
+
+    &-filter {
+        &__item a {
+            display: inline-block;
+            margin-left: 3.3rem;
+            font-size: 1.6rem;
+            font-weight: 600;
+            color: #111;
+            &:focus {
+                color: $primary-color;
+            }
+            &:hover {
+                color: $primary-color;
+            }
+        }
+    }
+
+    &__items {
+        height: 891px;
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -2.5rem;
+    }
+
+    &__item {
+        width: calc(100%/3 - 2.5rem);
+        height: calc(100%/3 - 3rem);
+        margin: 0 0 3rem 2.5rem;
+        border-radius: 1rem;
+        overflow: hidden;
+        position: relative;
+        &:hover {
+            .portfolio__wrap {
+                visibility: visible;
+                opacity: 1;
+                width: 100%;
+            }
+        }
+    }
+
+    &__image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__wrap {
+        position: absolute;
+        top: 0;
+        right: 0;;
+        width: 0;
+        height: 100%;
+        background-color: rgba($light-brown, 0.6);
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.4s linear;
+    }
+
+    &__icons {
+        width: 100%;
+        height: 3.2rem;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__icon {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 3.2rem;
+        height: 3.2rem;
+        font-size: 1.5rem;
+        color: $primary-color;
+        background-color: white;
+        border-radius: 50%;
+        &:first-child {
+            margin-right: 1.2rem;
+        }
+        &:hover {
+            color: white;
+            background-color: $primary-color;
+        }
+    }
+
+    &__info {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        color: white
+    }
+
+    &-item {
+        &__name {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        &__category {
+            font-size: 1.4rem;
+            text-transform: uppercase;
+            margin-bottom: 1rem;
+        }
+    }
 }
