--- a/style.css
+++ b/style.css
@@ -83,11 +83,13 @@ textarea {
 .hero__title {
   font-size: 4.8rem;
   font-weight: 700;
+  line-height: 1.2;
 }
 .hero__desc {
   margin: 3rem 0;
   font-size: 2.4rem;
   font-weight: 300;
+  line-height: 1.4;
   color: #5a6570;
 }
 .hero__button {
@@ -100,8 +102,11 @@ textarea {
 }
 
 @keyframes move {
+  from {
+    transform: translateY(0.75rem);
+  }
   to {
-    transform: translateY(-1.5rem);
+    transform: translateY(-0.75rem);
   }
 }
 .about {
@@ -344,6 +349,311 @@ textarea {
   font-size: 1.4rem;
   text-transform: uppercase;
   margin-bottom: 1rem;
+}
+
+.questions {
+  background-color: #fef8f5;
+  padding: 5rem 7.2rem;
+}
+.questions__header {
+  text-align: center;
+}
+.questions__title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #c2b7b1;
+  margin-bottom: 1rem;
+}
+.questions__desc {
+  padding-bottom: 2rem;
+  margin-bottom: 4.3rem;
+  font-size: 3.2rem;
+  font-weight: 700;
+  position: relative;
+}
+.questions__desc:before {
+  content: "";
+  width: 7rem;
+  height: 2px;
+  background-color: #eb5d1e;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.questions__item {
+  padding: 2rem 0;
+  border-bottom: 1px solid #eae7e5;
+  color: #343a40;
+}
+.questions__icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 1.6rem;
+}
+.questions__icon--up {
+  display: none;
+}
+.questions__question {
+  display: inline-block;
+  padding-left: 2.5rem;
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #343a40;
+  position: relative;
+  cursor: pointer;
+}
+.questions__question .active, .questions__question:hover {
+  color: #eb5d1e;
+}
+.questions__answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  padding-left: 2.5rem;
+  margin-top: 1.4rem;
+  font-size: 1.6rem;
+}
+
+.team {
+  margin: 5rem 7.2rem;
+}
+.team__header {
+  text-align: center;
+}
+.team__title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #c2b7b1;
+  margin-bottom: 1rem;
+}
+.team__desc {
+  padding-bottom: 2rem;
+  margin-bottom: 4.3rem;
+  font-size: 3.2rem;
+  font-weight: 700;
+  position: relative;
+}
+.team__desc:before {
+  content: "";
+  width: 7rem;
+  height: 2px;
+  background-color: #eb5d1e;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.team__members {
+  height: 26rem;
+  display: flex;
+  margin-left: -2.5rem;
+}
+.team__member {
+  width: calc(25% - 2.5rem);
+  margin-left: 2.5rem;
+  position: relative;
+}
+.team__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.team__wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.team__wrap:hover .team-member__socials {
+  width: 5rem;
+  opacity: 1;
+  visibility: visible;
+}
+.team__wrap:hover .team-member__icon {
+  width: calc(100% - 3rem);
+  opacity: 1;
+  visibility: visible;
+}
+.team__wrap:hover .team-member__info {
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+}
+.team__wrap:hover .team-member__name,
+.team__wrap:hover .team-member__job {
+  transform: translateY(0);
+}
+.team-member__socials {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 2rem;
+  color: white;
+  background-color: rgba(78, 64, 57, 0.8);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s linear;
+}
+.team-member__info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  padding-bottom: 3rem;
+  display: flex;
+  padding-left: 5rem;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: center;
+  text-transform: capitalize;
+  color: white;
+  background: linear-gradient(0deg, #4e4039 0%, rgba(78, 64, 57, 0) 100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s linear;
+}
+.team-member__icon {
+  margin: 2rem 1.5rem 0 1.5rem;
+  width: 0;
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+  z-index: 999;
+  transition: all 0.2s linear;
+}
+.team-member__icon:hover {
+  color: #eb5d1e;
+}
+.team-member__name {
+  margin-bottom: 0.5rem;
+  font-size: 1.8rem;
+  z-index: 999;
+  transform: translateY(3rem);
+  transition: all 0.2s linear;
+}
+.team-member__job {
+  font-size: 1.3rem;
+  font-style: italic;
+  z-index: 999;
+  transform: translateY(3rem);
+  transition: all 0.2s linear;
+}
+
+.clients {
+  background-color: #fef8f5;
+  padding: 5rem 7.2rem;
+  position: relative;
+}
+.clients__header {
+  text-align: center;
+}
+.clients__title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #c2b7b1;
+  margin-bottom: 1rem;
+}
+.clients__desc {
+  padding-bottom: 2rem;
+  margin-bottom: 4.3rem;
+  font-size: 3.2rem;
+  font-weight: 700;
+  position: relative;
+}
+.clients__desc:before {
+  content: "";
+  width: 7rem;
+  height: 2px;
+  background-color: #eb5d1e;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.clients__slider {
+  max-height: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left: -12rem;
+  margin-bottom: 2.5rem;
+  overflow: hidden;
+}
+.clients__client {
+  width: calc((100%/6) - 12rem);
+  margin: 0 0 10rem 12rem;
+  opacity: 0.4;
+}
+.clients__client:hover {
+  opacity: 1;
+}
+.clients__client img {
+  width: 100%;
+  max-height: 100%;
+}
+.clients__navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.clients__input {
+  display: none;
+}
+.clients__input:checked + .clients__label {
+  background-color: #eb5d1e;
+}
+.clients__button {
+  display: inline-block;
+  margin: 0 0.5rem;
+}
+.clients__label {
+  display: inline-block;
+  width: 1.2rem;
+  height: 1.2rem;
+  border: 1px solid #eb5d1e;
+  border-radius: 50%;
+  background-color: white;
+  cursor: pointer;
+}
+
+.contact {
+  padding: 5rem 7.2rem;
+}
+.contact__header {
+  text-align: center;
+}
+.contact__title {
+  font-size: 2.4rem;
+  font-weight: 600;
+  color: #c2b7b1;
+  margin-bottom: 1rem;
+}
+.contact__desc {
+  padding-bottom: 2rem;
+  margin-bottom: 4.3rem;
+  font-size: 3.2rem;
+  font-weight: 700;
+  position: relative;
+}
+.contact__desc:before {
+  content: "";
+  width: 7rem;
+  height: 2px;
+  background-color: #eb5d1e;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
