--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ textarea {
   border-radius: 5rem;
   background-color: #eb5d1e;
 }
+.header-nav__button:hover {
+  background-color: #973a13;
+}
 
 .hero {
   width: 100%;
@@ -99,6 +102,9 @@ textarea {
   color: white;
   border-radius: 7rem;
   background-color: #eb5d1e;
+}
+.hero__button:hover {
+  background-color: #973a13;
 }
 
 @keyframes move {
@@ -628,9 +634,13 @@ textarea {
 
 .contact {
   padding: 5rem 7.2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .contact__header {
   text-align: center;
+  width: 100%;
 }
 .contact__title {
   font-size: 2.4rem;
@@ -654,6 +664,225 @@ textarea {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+.contact__address, .contact__form {
+  border-top: 3px solid #eb5d1e;
+  padding: 3rem;
+  box-shadow: 0 0 15px 5px #eee;
+}
+.contact__address {
+  width: calc(40% - 1rem);
+}
+.contact__form {
+  width: calc(60% - 1rem);
+}
+.contact-address__info {
+  position: relative;
+  padding-left: 7.5rem;
+  margin-bottom: 3rem;
+}
+.contact-address__icon {
+  width: 4.5rem;
+  height: 4.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: #eb5d1e;
+  border-radius: 50%;
+  background-color: rgba(235, 93, 30, 0.1);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.contact-address__icon:hover {
+  color: white;
+  border-radius: 50%;
+  background-color: #eb5d1e;
+}
+.contact-address__title {
+  margin-bottom: 1rem;
+  font-size: 2.2rem;
+  color: #7a6960;
+}
+.contact-address__content {
+  font-size: 1.4rem;
+  color: #7a6960;
+}
+.contact-address__map {
+  width: 100%;
+  height: 30rem;
+  background-color: #eb5d1e;
+}
+.contact__form form {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.contact__form label {
+  display: block;
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+}
+.contact__form input,
+.contact__form textarea {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+  border: 2px solid #eee;
+  border-radius: 0.5rem;
+}
+.contact__form input:focus,
+.contact__form textarea:focus {
+  border-color: #eb5d1e;
+}
+.contact__form textarea {
+  height: 20rem;
+}
+.contact__form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 1.5rem 2.5rem;
+  font-size: 1.6rem;
+  color: white;
+  background-color: #eb5d1e;
+  border: none;
+  border-radius: 5rem;
+}
+.contact__form button:hover {
+  background-color: #973a13;
+}
+.contact__name, .contact__email {
+  width: calc((100%/2) - 1.3rem);
+  margin-bottom: 3rem;
+}
+.contact__subject, .contact__message {
+  width: 100%;
+  margin-bottom: 3rem;
+}
+
+.join {
+  background-color: #fef8f5;
+  padding: 5rem 7.2rem;
+  position: relative;
+}
+.join__header {
+  text-align: center;
+}
+.join__title {
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
+}
+.join__desc {
+  margin-bottom: 4.3rem;
+  font-size: 1.5rem;
+}
+.join__subcribe {
+  width: 55rem;
+  margin: 0 auto;
+}
+.join__form {
+  width: 100%;
+  position: relative;
+}
+.join__form input {
+  width: 100%;
+  padding: 1.2rem 1.5rem;
+  padding-right: calc(20% + 1.2rem);
+  font-size: 1.6rem;
+  font-weight: 400;
+  border: none;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  box-shadow: 0 0 15px 5px #eee;
+}
+.join__form button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(100% - 1.5rem);
+  height: 100%;
+  font-size: 1.6rem;
+  color: white;
+  background-color: #eb5d1e;
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 15px 5px #eee;
+  cursor: pointer;
+}
+.join__form button:hover {
+  background-color: #973a13;
+}
+.join__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(20% + 1.5rem);
+  height: 100%;
+  overflow: hidden;
+}
+
+.footer {
+  padding: 5rem 7.2rem;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__info, .footer__links, .footer__services, .footer__socials {
+  width: calc(25% - 3rem);
+}
+.footer__brand {
+  font-size: 2.6rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+.footer__contact {
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.6;
+}
+.footer__title {
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.footer__list li {
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+}
+.footer__list li i {
+  color: #eb5d1e;
+  margin-right: 1rem;
+}
+.footer__item {
+  font-size: 1.4rem;
+}
+.footer__item:hover {
+  color: #eb5d1e;
+}
+.footer__desc {
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+}
+.footer__social-networks li {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  margin-right: 0.5rem;
+  font-size: 1.4rem;
+  color: white;
+  background-color: #eb5d1e;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.footer__social-networks li:hover {
+  opacity: 0.6;
 }
 
 /*# sourceMappingURL=style.css.map */
