--- a/style.scss
+++ b/style.scss
@@ -69,6 +69,9 @@ textarea {
             color: white;
             border-radius: 5rem;
             background-color: $primary-color;
+            &:hover {
+                background-color: #973a13;
+            }
         }
     }
 
@@ -117,6 +120,9 @@ textarea {
         color: white;
         border-radius: 7rem;
         background-color: $primary-color;
+        &:hover {
+            background-color: #973a13;
+        }
     }
 }
 
@@ -722,9 +728,13 @@ textarea {
 
 .contact {
     padding: 5rem 7.2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
     &__header {
         text-align: center;
+        width: 100%;
     }
 
     &__title {
@@ -749,6 +759,268 @@ textarea {
             bottom: 0;
             left: 50%;
             transform: translateX(-50%);
+        }
+    }
+
+    &__address,
+    &__form {
+        border-top: 3px solid $primary-color;
+        padding: 3rem;
+        box-shadow: 0 0 15px 5px #eee;
+    }
+
+    &__address {
+        width: calc(40% - 1rem);
+    }
+
+    &__form {
+        width: calc(60% - 1rem);
+    }
+
+    &-address {
+        &__info {
+            position: relative;
+            padding-left: 7.5rem;
+            margin-bottom: 3rem;
+        }
+
+        &__icon {
+            width: 4.5rem;
+            height: 4.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+            color: $primary-color;
+            border-radius: 50%;
+            background-color: rgba($primary-color, 0.1);
+            position: absolute;
+            top: 0;
+            left: 0;
+            &:hover {
+                color: white;
+                border-radius: 50%;
+                background-color: $primary-color;
+            }
+        }
+
+        &__title {
+            margin-bottom: 1rem;
+            font-size: 2.2rem;
+            color: $light-brown;
+        }
+
+        &__content {
+            font-size: 1.4rem;
+            color: $light-brown;
+        }
+        &__map {
+            width: 100%;
+            height: 30rem;
+            background-color: $primary-color;
+        }
+    }
+
+    &__form {
+        form {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        label {
+            display: block;
+            font-size: 1.6rem;
+            margin-bottom: 1rem;
+        }
+
+        input,
+        textarea {
+            width: 100%;
+            padding: 1.2rem;
+            font-size: 1.6rem;
+            font-weight: 400;
+            border: 2px solid #eee;
+            border-radius: 0.5rem;
+            &:focus {
+                border-color: $primary-color;
+            }
+        }
+
+        textarea {
+            height: 20rem;
+        }
+
+        button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+            padding: 1.5rem 2.5rem;
+            font-size: 1.6rem;
+            color: white;
+            background-color: $primary-color;
+            border: none;
+            border-radius: 5rem;
+            &:hover {
+                background-color: #973a13;
+            }
+        }
+    }
+
+    &__name,
+    &__email {
+        width: calc((100%/2) - 1.3rem);
+        margin-bottom: 3rem;
+    }
+
+    &__subject,
+    &__message {
+        width: 100%;
+        margin-bottom: 3rem;
+    }
+}
+
+.join {
+    background-color: $secondary-color;
+    padding: 5rem 7.2rem;
+    position: relative;
+
+    &__header {
+        text-align: center;
+    }
+
+    &__title {
+        font-size: 2.4rem;
+        margin-bottom: 1rem;
+    }
+
+    &__desc {
+        margin-bottom: 4.3rem;
+        font-size: 1.5rem;
+    }
+
+    &__subcribe {
+        width: 55rem;
+        margin: 0 auto;
+    }
+
+    &__form {
+        width: 100%;
+        position: relative;
+        
+        input {
+            width: 100%;
+            padding: 1.2rem 1.5rem;
+            padding-right: calc(20% + 1.2rem);
+            font-size: 1.6rem;
+            font-weight: 400;
+            border: none;
+            border-top-left-radius: 0.5rem;
+            border-bottom-left-radius: 0.5rem;
+            box-shadow: 0 0 15px 5px #eee;
+        }
+
+        button {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: calc(100% - 1.5rem);
+            height: 100%;
+            font-size: 1.6rem;
+            color: white;
+            background-color: $primary-color;
+            border: none;
+            border-radius: 0.5rem;
+            box-shadow: 0 0 15px 5px #eee;
+            cursor: pointer;
+            &:hover {
+                background-color: #973a13;
+            }
+        }
+    }
+
+    &__button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: calc(20% + 1.5rem);
+        height: 100%;
+        overflow: hidden;
+    }
+}
+
+.footer {
+    padding: 5rem 7.2rem;
+    display: flex;
+    justify-content: space-between;
+
+    &__info,
+    &__links,
+    &__services,
+    &__socials {
+        width: calc(25% - 3rem);
+    }
+
+    &__brand {
+        font-size: 2.6rem;
+        font-weight: 300;
+        margin-bottom: 2rem;
+    }
+
+    &__contact {
+        font-size: 1.4rem;
+        font-weight: 300;
+        line-height: 1.6;
+    }
+
+    &__title {
+        font-size: 1.6rem;
+        font-weight: 600;
+        margin-bottom: 1rem;
+    }
+
+    &__list {
+        li {
+            margin: 2rem 0;
+            display: flex;
+            align-items: center;
+            i {
+                color: $primary-color;
+                margin-right: 1rem;
+            }
+        }
+    }
+
+    &__item {
+        font-size: 1.4rem;
+        &:hover {
+            color: $primary-color;
+        }
+    }
+
+    &__desc {
+        font-size: 1.4rem;
+        margin-bottom: 2rem;
+    }
+
+    &__social-networks {
+        li {
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            width: 4rem;
+            height: 4rem;
+            margin-right: 0.5rem;
+            font-size: 1.4rem;
+            color: white;
+            background-color: $primary-color;
+            border-radius: 50%;
+            cursor: pointer;
+            &:hover {
+                opacity: 0.6;
+            }
         }
     }
 }
